unpackaged/main/default/objects/VRTS_Response__c/VRTS_Response__c.object-meta.xml
<CustomObject>
    <label>VRTS Response</label>
    <nameField>
        <displayFormat>VRTSR-{00000}</displayFormat>
        <label>VRTS Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VRTS Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>