unpackaged/main/default/objects/VRTS_Response__c/fields/Category_Ar__c.field-meta.xml
<CustomField>
    <fullName>Category_Ar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>