unpackaged/main/default/objects/VRTS_Response__c/fields/Category_En__c.field-meta.xml
<CustomField>
    <fullName>Category_En__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category En</label>
    <length>255</length>
    <type>Text</type>
</CustomField>