unpackaged/main/default/objects/VRTS_Response__c/fields/Question_En__c.field-meta.xml
<CustomField>
    <fullName>Question_En__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question En</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>