unpackaged/main/default/objects/VRTS_Response__c/fields/VRTS_Observation__c.field-meta.xml
<CustomField>
    <fullName>VRTS_Observation__c</fullName>
    <label>VRTS Observation</label>
    <referenceTo>VRTS_Observation__c</referenceTo>
    <relationshipLabel>VRTS Responses</relationshipLabel>
    <relationshipName>VRTS_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>